[package]
name = "rv-decoder"
version = "0.1.3"
edition = "2021"
license = "BSD-3-Clause"
author = ["Suhas Kudlur Viswanath <suhaskv0111@gmail.com>"]
description = "A RISC-V instruction decoder"
readme = "README.md"
homepage = "https://github.com/skudlur/rv-decoder"
repository = "https://github.com/skudlur/rv-decoder"
keywords = ["riscv", "decoder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
